# gdbserver

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix  target-desc.xml  test.asm  test.c
binaries/: .gitignore  Makefile  float.c  minimal.asm  minimal.c  redox.asm  sighandler.c  signal.c  sigsegv.c
src/: lib.rs  main.rs
src/os/: linux.rs  mod.rs  redox.rs  regs.rs
