[package]
name = "gdbserver"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
gdb-remote-protocol = { path = "rust-gdb-remote-protocol" }
structopt = "0.3.15"
memchr = "2.3.3"
env_logger = "0.7.1"
log = "0.4.8"
byteorder = "1.3.4"
# f80 = { git = "https://gitlab.redox-os.org/redox-os/f80.git", rev = "d8de286" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.71"
[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall.git" }
strace = { git = "https://gitlab.redox-os.org/redox-os/strace-redox" }
